# OMEGA_X1

./: .eslintignore  .eslintrc  .gitignore  AI_EVOLUTION_EXPLANATION.md  ATTACK_CAPABILITIES_README.md  ATTACK_QUICK_REFERENCE.md  CMakeLists.txt  COMPLETE_ATTACK_LIST.md  DEPLOYMENT_ENVIRONMENT_SETUP.bat  DEPLOYMENT_GUIDE.md  ECOMEGA_X1_COMMAND_CHEAT_SHEET.md  EMV_INTEGRATION_PLAN.md  LAUNCH_OMEGA.bat  LINUX_DEPLOYMENT_README.md  Makefile.linux  OMEGA_IMPLEMENTATION_SUMMARY.md  OMEGA_MONITOR_README.md  README.md  XPOSED_NFCGATE_GUIDE.md  XPOSED_NFCGATE_README.md  application.fam  arp_poisoning_implementation.py  auto_ecoATM_deploy.sh  badass_proxy_clean.py  command_injection_omega.py  config  create_usb_deployment.sh  demo_interface.py  demo_omega_monitor.py  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  gh-pages-cache-restore.js  gh-pages-cache.js  git_upload.sh  github-source.js  index  install_autostart.sh  install_omega_x.sh  integrate_repositories.bat  (+30 more)
